Fixed aside detail border radius not showing on safari

--- a/src/scss/module/_detail.scss
+++ b/src/scss/module/_detail.scss
@@ -69,6 +69,7 @@ aside.detail .meta {
     display: flex;
     padding: 24px 24px 12px;
     flex-wrap: wrap;
+    border-radius: 4px 4px 0 0;
     background-color: white;
 }
 aside.detail .meta h1 {
